--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,32 @@
 		<version>2.6.10</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>nl.kristalsoftware.ddd.domain</groupId>
+	<groupId>nl.kristalsoftware.ddd</groupId>
 	<artifactId>ddd-event-frame</artifactId>
 	<version>0.0.1-baseTypes-SNAPSHOT</version>
 	<name>ddd-event-frame</name>
 	<description>Little framework for ddd event sourcing projects</description>
 	<properties>
 		<java.version>17</java.version>
+		<avro.version>1.10.2</avro.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
